# Soil-Meter

./: CMakeLists.txt  Parts List.txt  README.md
Src/: CMakeLists.txt  main.c
